--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,11 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.container {
+    max-width: 980px;
+}
+
 #logo {
     max-height: 50px;
     margin: 30px 0;
@@ -8,44 +16,84 @@
 }
 
 .principles {
-    max-height: 160px;
+    margin-top: 40px;
 }
 
-.principle-container {
+.principle-img-container {
     text-align: center;
-    padding: 60px 0;
+}
+
+.principle-img {
+    max-height: 60px;
 }
 
 .copyright {
     letter-spacing: 1px;
     font-size: 14px;
     color: #ccc;
-    text-align: center;
+    margin-top: 40px;
     padding-bottom: 40px;
 }
 
-@media (max-width: 575.98px) {
-    .principles {
-        max-height: 120px;
-    }
-    .principle-container {
-        padding: 60px 0;
-        padding-bottom: 20px;
-    }
-    .copyright {
-        padding-top: 40px;
+h6 {
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0.5px;
+}
+
+h5 {
+    margin-top: 60px;
+}
+
+h4 {
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+p {
+    font-size: 14px;
+    line-height: 2;
+}
+
+.ulhun-h {
+    margin-top: 40px;
+}
+
+.principle-desc {
+    font-size: 14px;
+}
+
+.principle-block {
+    margin-bottom: 20px;
+}
+
+@media (min-width: 376px) {
+    h1 {
+        font-size: 24px;
     }
 }
 
-@media (max-width: 767.98px) {
-    .principles {
-        max-height: 120px;
+@media (min-width: 768px) {
+    h1 {
+        font-size: 24px;
     }
-    .principle-container {
-        padding: 60px 0;
-        padding-bottom: 20px;
+}
+
+@media (min-width: 992px) {
+    h1 {
+        font-size: 32px;
     }
-    .copyright {
-        padding-top: 40px;
+}
+
+@media (min-width: 1200px) {
+    h1 {
+        font-size: 32px;
+    }
+}
+
+@media (min-width: 1400px) {
+    h1 {
+        font-size: 32px;
     }
 }
