--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,14 @@ p {
     margin-bottom: 20px;
 }
 
+.projects-h {
+    margin-top: 30px;
+}
+
+.project-img {
+    margin-bottom: 20px;
+}
+
 @media (min-width: 376px) {
     h1 {
         font-size: 24px;
