--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,7 @@ body {
 }
 
 .copyright {
+    text-align: center;
     letter-spacing: 1px;
     font-size: 14px;
     color: #ccc;
@@ -74,6 +75,15 @@ p {
 
 .project-img {
     margin-bottom: 20px;
+}
+
+.logos {
+    height: 100px;
+}
+
+.logos-container {
+    text-align: center;
+    margin-top: 40px;
 }
 
 @media (min-width: 376px) {
